+Added BUILD_DATE +Added config.h

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "types.h": "c",
-        "helpers.h": "c"
+        "helpers.h": "c",
+        "config.h": "c"
     }
 }
