--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/c,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=c,python
 
+*/Libs/*
+*/Deps/*
+*/Data/*
+
 ### C ###
 # Prerequisites
 *.d
