--- a/c/.vscode/settings.json
+++ b/c/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "types.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "stdio.h": "c",
+        "unity.h": "c",
+        "unity_config.h": "c"
     }
 }
