--- a/c/.vscode/settings.json
+++ b/c/.vscode/settings.json
@@ -5,5 +5,6 @@
         "stdio.h": "c",
         "unity.h": "c",
         "unity_config.h": "c"
-    }
+    },
+    "cmake.configureOnOpen": false
 }
