FIX: Resolves errors with unparser directories  for 'PE'

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -87,6 +87,15 @@
                     "text": "set output-radix 16"
                 }
             ]
-        }
+        },
+        {
+            "name": "Python: Current File (Integrated Terminal)",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "args": [
+                "libvmem_plugin.dll"
+            ]
+        },
     ]
 }
